3: JSON & JS for last row
Updates:
Row 3 (bottom) left and right cards - JSON & JS Fetch

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -432,3 +432,16 @@ body {
 .list-group-item:not(:last-child) {
     border-bottom: 1px solid rgba(48, 48, 48, 0.125);
 }
+
+// .text-bg-warning{
+//     background-color: yellow;
+// }
+
+// .text-bg-success{
+//     background-color: green;
+// }
+
+// .text-bg-secondary{
+//     background-color: gray;
+// }
+   
